# jianmu-compiler

./: .gitignore  CMakeLists.txt  README.md  result.ll  test.s  try.c  try.ll
docs/: how_init_val_works.py  structure.dot  time.dot  文法.md
include/cminusfc/: cminusf_builder.hpp  get_constnum.hpp
include/codegen/: CodeGen.hpp  InstructionSelector.hpp  LivenessAnalysis.hpp  MIBuilder.hpp  MIDCE.hpp  MIbuilder.hpp  MachineBasicBlock.hpp  MachineFunction.hpp  MachineInstr.hpp  MachineModule.hpp  MachinePass.hpp  Operand.hpp  Operands.hpp  PeepholeOptimization.hpp  RegisterAllocation.hpp
include/common/: ast.hpp  get_constnum.hpp
include/lightir/: BasicBlock.hpp  Constant.hpp  IRBuilder.hpp  Instruction.hpp  Module.hpp  PatternMatch.hpp  Type.hpp  User.hpp  Value.hpp
include/passes/: DeadCode.hpp  Dominators.hpp  LICM.hpp  LoopDetection.hpp  Mem2Reg.hpp  PassManager.hpp
src/: CMakeLists.txt
src/cminusfc/: cminusf_builder.cpp  cminusfc.cpp  get_constnum.cpp
src/codegen/: CMakeLists.txt  CodeGen.cpp  InstructionSelector.cpp  LivenessAnalysis.cpp  MIBuilder.cpp  MIDCE.cpp  MIbuilder.cpp  MachineBasicBlock.cpp  MachineFunction.cpp  MachineInstr.cpp  MachineModule.cpp  Operand.cpp  PeepholeOptimization.cpp  RegisterAllocation.cpp
src/common/: CMakeLists.txt  ast.cpp  get_constnum.cpp
src/lightir/: BasicBlock.cpp  Constant.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  Value.cpp
src/logging/: test_ast.cpp
src/parser/: CMakeLists.txt  (+2 more)
tests/: clang_test.sh  get_time.py  log.txt  remote.sh  remote_test.py  test_func.sh  test_perf.sh
(+130 files in other folders)
